sfdx-src/main/default/objects/PLM_Team_Member__c/PLM_Team_Member__c.object-meta.xml
<CustomObject>
    <label>PLM Team Member</label>
    <nameField>
        <displayFormat>TM-{000000}</displayFormat>
        <label>Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PLM Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>