sfdx-src/main/default/objects/PLM_Team_Member__c/fields/PLM_Team__c.field-meta.xml
<CustomField>
    <fullName>PLM_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PLM Team</label>
    <referenceTo>PLM_Team__c</referenceTo>
    <relationshipLabel>PLM Team Members</relationshipLabel>
    <relationshipName>PLM_Team2TeamMembers</relationshipName>
    <type>Lookup</type>
</CustomField>