sfdx-src/main/default/objects/PLM_Team_Member__c/fields/PLM_Team_Group__c.field-meta.xml
<CustomField>
    <fullName>PLM_Team_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PLM Team Group</label>
    <referenceTo>PLM_Team_Group__c</referenceTo>
    <relationshipLabel>PLM Team Members</relationshipLabel>
    <relationshipName>PLM_TeamGroup2TeamMembers</relationshipName>
    <type>Lookup</type>
</CustomField>