sfdx-src/main/default/objects/PLM_Team_Member__c/fields/Role_In_Team__c.field-meta.xml
<CustomField>
    <fullName>Role_In_Team__c</fullName>
    <description>What is your role? are you a tester / developer etc</description>
    <inlineHelpText>What is your role? are you a tester / developer etc</inlineHelpText>
    <label>Role In Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_In_Team</valueSetName>
    </valueSet>
</CustomField>