sfdx-src/main/default/objects/PLM_Team_Member__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PLM Team Members</relationshipLabel>
    <relationshipName>PLM_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>